--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
           type="image/x-icon">
 </head>
 <div class="topnav">
-    <a href="fp.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="discover.html">Discover</a>
     <a href="quizotd.html">Quiz of the day</a>
     <a href="allquizzes/html">Quizzes</a>
