--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </header>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="discover.html">Discover</a>
         <a href="quizotd.html">Quiz of the day</a>
-        <a href="#home">Quizzes</a>
+        <a href="allquizzes.html">Quizzes</a>
         <a href="login.html">Login</a>
+        <a href="discover.html">About</a>
+        <a href="discover.html">Contact Us</a>
     </div>
 
 
