--- a/login.html
+++ b/login.html
@@ -10,12 +10,13 @@
           type="image/x-icon">
 </head>
 <div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="discover.html">Discover</a>
-    <a href="quizotd.html">Quiz of the day</a>
-    <a href="allquizzes/html">Quizzes</a>
-    <a class = "active" href="login.html">Login</a>
-</div>
+        <a class="active" href="#home">Home</a>
+        <a href="quizotd.html">Quiz of the day</a>
+        <a href="allquizzes.html">Quizzes</a>
+        <a href="login.html">Login</a>
+        <a href="discover.html">About</a>
+        <a href="discover.html">Contact Us</a>
+    </div>
 <div class ="bg-img">
     <div class="login">
         <form id="login" method="get" action="login.html">
