--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a href="quizotd.html">Quiz of the day</a>
         <a href="allquizzes.html">Quizzes</a>
         <a href="login.html">Login</a>
-        <a href="discover.html">About</a>
-        <a href="discover.html">Contact Us</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact Us</a>
     </div>
 
 
