Update login.html (update navbar sequence and active link)

--- a/login.html
+++ b/login.html
@@ -10,12 +10,12 @@
           type="image/x-icon">
 </head>
 <div class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a href="index.html">Home</a>
         <a href="quizotd.html">Quiz of the day</a>
         <a href="allquizzes.html">Quizzes</a>
-        <a href="login.html">Login</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact Us</a>
+        <a class="active" href="login.html">Login</a>
     </div>
 <div class ="bg-img">
     <div class="login">
