--- a/allquizzes.html
+++ b/allquizzes.html
@@ -4,7 +4,7 @@
     <title>
         Quizzes
     </title>
-    <link rel="stylesheet" href="discover.css">
+    <link rel="stylesheet" href="allquizzes.css">
     <link rel="icon" href=
 "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzLv9wQZ2LfGwzGVrbHqnZWKiS3eIuTHBLa9cQrvRSjw&s"
           type="image/x-icon">
