--- a/allquizzes.html
+++ b/allquizzes.html
@@ -20,7 +20,7 @@
     <div class = "bg-img">
         <div class="row">
             <div class="column">
-              <img src="images/globe.webp" alt="Snow" style="width:100%">
+              <img src="globe.webp" alt="Snow" style="width:100%">
             </div>
             </div>
           </div>
