--- a/allquizzes.html
+++ b/allquizzes.html
@@ -20,7 +20,7 @@
     <div class = "bg-img">
         <div class="row">
             <div class="column">
-              <a href = "geographyquiz.html><img src="globe.webp" alt="Geography Quiz" style="width:100%"></a>
+              <a href = "geographyquiz.html"><img src="globe.webp" alt="Geography Quiz" style="width:100%"></a>
             </div>
             </div>
           </div>
